--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -30,9 +31,56 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block 9">
+          <div class="col-md-1 hour">9 AM</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button id="9" class="saveBtn col-md-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 10">
+        <div class="col-md-1 hour">10 AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="10" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 11">
+        <div class="col-md-1 hour">11 AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="11" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 12">
+        <div class="col-md-1 hour">12 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="12" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 13">
+        <div class="col-md-1 hour">1 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="13" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 14">
+        <div class="col-md-1 hour">2 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="14" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 15">
+        <div class="col-md-1 hour">3 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="15" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 16">
+        <div class="col-md-1 hour">4 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="16" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-block 17">
+        <div class="col-md-1 hour">5 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="17" class="col-md-1 saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets\style.js"></script>
   </body>
 </html>
